labcode/2-parsers/src/maths_parser.output
Nonterminals useless in grammar

   FUNCTION_NAME


Grammar

    0 $accept: ROOT $end

    1 ROOT: EXPR

    2 EXPR: TERM
    3     | EXPR T_PLUS TERM
    4     | EXPR T_MINUS TERM

    5 TERM: EXPONENT
    6     | TERM T_TIMES EXPONENT
    7     | TERM T_DIVIDE EXPONENT

    8 EXPONENT: FACTOR
    9         | FACTOR T_EXPONENT EXPONENT

   10 FACTOR: T_NUMBER
   11       | T_LBRACKET EXPR T_RBRACKET
   12       | T_VARIABLE
   13       | T_LOG T_LBRACKET EXPR T_RBRACKET
   14       | T_EXP T_LBRACKET EXPR T_RBRACKET
   15       | T_SQRT T_LBRACKET EXPR T_RBRACKET


Terminals, with rules where they appear

$end (0) 0
error (256)
T_TIMES (258) 6
T_DIVIDE (259) 7
T_PLUS (260) 3
T_MINUS (261) 4
T_EXPONENT (262) 9
T_LBRACKET (263) 11 13 14 15
T_RBRACKET (264) 11 13 14 15
T_LOG (265) 13
T_EXP (266) 14
T_SQRT (267) 15
T_NUMBER (268) 10
T_VARIABLE (269) 12


Nonterminals, with rules where they appear

$accept (15)
    on left: 0
ROOT (16)
    on left: 1, on right: 0
EXPR (17)
    on left: 2 3 4, on right: 1 3 4 11 13 14 15
TERM (18)
    on left: 5 6 7, on right: 2 3 4 6 7
EXPONENT (19)
    on left: 8 9, on right: 5 6 7 9
FACTOR (20)
    on left: 10 11 12 13 14 15, on right: 8 9


State 0

    0 $accept: . ROOT $end

    T_LBRACKET  shift, and go to state 1
    T_LOG       shift, and go to state 2
    T_EXP       shift, and go to state 3
    T_SQRT      shift, and go to state 4
    T_NUMBER    shift, and go to state 5
    T_VARIABLE  shift, and go to state 6

    ROOT      go to state 7
    EXPR      go to state 8
    TERM      go to state 9
    EXPONENT  go to state 10
    FACTOR    go to state 11


State 1

   11 FACTOR: T_LBRACKET . EXPR T_RBRACKET

    T_LBRACKET  shift, and go to state 1
    T_LOG       shift, and go to state 2
    T_EXP       shift, and go to state 3
    T_SQRT      shift, and go to state 4
    T_NUMBER    shift, and go to state 5
    T_VARIABLE  shift, and go to state 6

    EXPR      go to state 12
    TERM      go to state 9
    EXPONENT  go to state 10
    FACTOR    go to state 11


State 2

   13 FACTOR: T_LOG . T_LBRACKET EXPR T_RBRACKET

    T_LBRACKET  shift, and go to state 13


State 3

   14 FACTOR: T_EXP . T_LBRACKET EXPR T_RBRACKET

    T_LBRACKET  shift, and go to state 14


State 4

   15 FACTOR: T_SQRT . T_LBRACKET EXPR T_RBRACKET

    T_LBRACKET  shift, and go to state 15


State 5

   10 FACTOR: T_NUMBER .

    $default  reduce using rule 10 (FACTOR)


State 6

   12 FACTOR: T_VARIABLE .

    $default  reduce using rule 12 (FACTOR)


State 7

    0 $accept: ROOT . $end

    $end  shift, and go to state 16


State 8

    1 ROOT: EXPR .
    3 EXPR: EXPR . T_PLUS TERM
    4     | EXPR . T_MINUS TERM

    T_PLUS   shift, and go to state 17
    T_MINUS  shift, and go to state 18

    $default  reduce using rule 1 (ROOT)


State 9

    2 EXPR: TERM .
    6 TERM: TERM . T_TIMES EXPONENT
    7     | TERM . T_DIVIDE EXPONENT

    T_TIMES   shift, and go to state 19
    T_DIVIDE  shift, and go to state 20

    $default  reduce using rule 2 (EXPR)


State 10

    5 TERM: EXPONENT .

    $default  reduce using rule 5 (TERM)


State 11

    8 EXPONENT: FACTOR .
    9         | FACTOR . T_EXPONENT EXPONENT

    T_EXPONENT  shift, and go to state 21

    $default  reduce using rule 8 (EXPONENT)


State 12

    3 EXPR: EXPR . T_PLUS TERM
    4     | EXPR . T_MINUS TERM
   11 FACTOR: T_LBRACKET EXPR . T_RBRACKET

    T_PLUS      shift, and go to state 17
    T_MINUS     shift, and go to state 18
    T_RBRACKET  shift, and go to state 22


State 13

   13 FACTOR: T_LOG T_LBRACKET . EXPR T_RBRACKET

    T_LBRACKET  shift, and go to state 1
    T_LOG       shift, and go to state 2
    T_EXP       shift, and go to state 3
    T_SQRT      shift, and go to state 4
    T_NUMBER    shift, and go to state 5
    T_VARIABLE  shift, and go to state 6

    EXPR      go to state 23
    TERM      go to state 9
    EXPONENT  go to state 10
    FACTOR    go to state 11


State 14

   14 FACTOR: T_EXP T_LBRACKET . EXPR T_RBRACKET

    T_LBRACKET  shift, and go to state 1
    T_LOG       shift, and go to state 2
    T_EXP       shift, and go to state 3
    T_SQRT      shift, and go to state 4
    T_NUMBER    shift, and go to state 5
    T_VARIABLE  shift, and go to state 6

    EXPR      go to state 24
    TERM      go to state 9
    EXPONENT  go to state 10
    FACTOR    go to state 11


State 15

   15 FACTOR: T_SQRT T_LBRACKET . EXPR T_RBRACKET

    T_LBRACKET  shift, and go to state 1
    T_LOG       shift, and go to state 2
    T_EXP       shift, and go to state 3
    T_SQRT      shift, and go to state 4
    T_NUMBER    shift, and go to state 5
    T_VARIABLE  shift, and go to state 6

    EXPR      go to state 25
    TERM      go to state 9
    EXPONENT  go to state 10
    FACTOR    go to state 11


State 16

    0 $accept: ROOT $end .

    $default  accept


State 17

    3 EXPR: EXPR T_PLUS . TERM

    T_LBRACKET  shift, and go to state 1
    T_LOG       shift, and go to state 2
    T_EXP       shift, and go to state 3
    T_SQRT      shift, and go to state 4
    T_NUMBER    shift, and go to state 5
    T_VARIABLE  shift, and go to state 6

    TERM      go to state 26
    EXPONENT  go to state 10
    FACTOR    go to state 11


State 18

    4 EXPR: EXPR T_MINUS . TERM

    T_LBRACKET  shift, and go to state 1
    T_LOG       shift, and go to state 2
    T_EXP       shift, and go to state 3
    T_SQRT      shift, and go to state 4
    T_NUMBER    shift, and go to state 5
    T_VARIABLE  shift, and go to state 6

    TERM      go to state 27
    EXPONENT  go to state 10
    FACTOR    go to state 11


State 19

    6 TERM: TERM T_TIMES . EXPONENT

    T_LBRACKET  shift, and go to state 1
    T_LOG       shift, and go to state 2
    T_EXP       shift, and go to state 3
    T_SQRT      shift, and go to state 4
    T_NUMBER    shift, and go to state 5
    T_VARIABLE  shift, and go to state 6

    EXPONENT  go to state 28
    FACTOR    go to state 11


State 20

    7 TERM: TERM T_DIVIDE . EXPONENT

    T_LBRACKET  shift, and go to state 1
    T_LOG       shift, and go to state 2
    T_EXP       shift, and go to state 3
    T_SQRT      shift, and go to state 4
    T_NUMBER    shift, and go to state 5
    T_VARIABLE  shift, and go to state 6

    EXPONENT  go to state 29
    FACTOR    go to state 11


State 21

    9 EXPONENT: FACTOR T_EXPONENT . EXPONENT

    T_LBRACKET  shift, and go to state 1
    T_LOG       shift, and go to state 2
    T_EXP       shift, and go to state 3
    T_SQRT      shift, and go to state 4
    T_NUMBER    shift, and go to state 5
    T_VARIABLE  shift, and go to state 6

    EXPONENT  go to state 30
    FACTOR    go to state 11


State 22

   11 FACTOR: T_LBRACKET EXPR T_RBRACKET .

    $default  reduce using rule 11 (FACTOR)


State 23

    3 EXPR: EXPR . T_PLUS TERM
    4     | EXPR . T_MINUS TERM
   13 FACTOR: T_LOG T_LBRACKET EXPR . T_RBRACKET

    T_PLUS      shift, and go to state 17
    T_MINUS     shift, and go to state 18
    T_RBRACKET  shift, and go to state 31


State 24

    3 EXPR: EXPR . T_PLUS TERM
    4     | EXPR . T_MINUS TERM
   14 FACTOR: T_EXP T_LBRACKET EXPR . T_RBRACKET

    T_PLUS      shift, and go to state 17
    T_MINUS     shift, and go to state 18
    T_RBRACKET  shift, and go to state 32


State 25

    3 EXPR: EXPR . T_PLUS TERM
    4     | EXPR . T_MINUS TERM
   15 FACTOR: T_SQRT T_LBRACKET EXPR . T_RBRACKET

    T_PLUS      shift, and go to state 17
    T_MINUS     shift, and go to state 18
    T_RBRACKET  shift, and go to state 33


State 26

    3 EXPR: EXPR T_PLUS TERM .
    6 TERM: TERM . T_TIMES EXPONENT
    7     | TERM . T_DIVIDE EXPONENT

    T_TIMES   shift, and go to state 19
    T_DIVIDE  shift, and go to state 20

    $default  reduce using rule 3 (EXPR)


State 27

    4 EXPR: EXPR T_MINUS TERM .
    6 TERM: TERM . T_TIMES EXPONENT
    7     | TERM . T_DIVIDE EXPONENT

    T_TIMES   shift, and go to state 19
    T_DIVIDE  shift, and go to state 20

    $default  reduce using rule 4 (EXPR)


State 28

    6 TERM: TERM T_TIMES EXPONENT .

    $default  reduce using rule 6 (TERM)


State 29

    7 TERM: TERM T_DIVIDE EXPONENT .

    $default  reduce using rule 7 (TERM)


State 30

    9 EXPONENT: FACTOR T_EXPONENT EXPONENT .

    $default  reduce using rule 9 (EXPONENT)


State 31

   13 FACTOR: T_LOG T_LBRACKET EXPR T_RBRACKET .

    $default  reduce using rule 13 (FACTOR)


State 32

   14 FACTOR: T_EXP T_LBRACKET EXPR T_RBRACKET .

    $default  reduce using rule 14 (FACTOR)


State 33

   15 FACTOR: T_SQRT T_LBRACKET EXPR T_RBRACKET .

    $default  reduce using rule 15 (FACTOR)
